# Aurora

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  ASSISTANT_REGRESSION_ANALYSIS.md  Aurora.md  CLAUDE.md  CLOSED_SOURCE_NOTICE.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENT_ROADMAP.md  LICENSE  MULTISESSION_FAILURE_ANALYSIS.md  MULTISESSION_IMPROVEMENTS_SUMMARY.md  MULTISESSION_RETRIEVAL_OPTIMIZATION.md  Makefile  README.md  analyze_assistant_regression.py  analyze_assistant_regression_detailed.py  analyze_failures.py  analyze_improvement_impact.py  analyze_multisession_failures.py  analyze_multisession_quick.py  aurora.md  aurora_generative_soul_memory.py  debug_single_test.py  docker-compose.yml  improvement_analysis.json  longmemeval_baseline.json  longmemeval_final_optimized.json  longmemeval_final_results.json  longmemeval_full_results.json  longmemeval_improved_results.json  longmemeval_phase1_results.json  longmemeval_phase2_4_results.json  longmemeval_results.json  mab_benchmark_results.json  multisession_quick_analysis.json  phase1_comprehensive_test.py  phase1_test.py  (+22 more)
$tmpdir/blobs/: pkt_c1d0cfdd8e21.txt
.claude/: settings.json
.cursor/agents/: aurora-benchmark.md  aurora-dev.md  code-reviewer.md  memory-algorithm.md
.cursor/rules/: aurora-algorithms.mdc  aurora-api.mdc  aurora-project.mdc  aurora-tests.mdc
.github/: dependabot.yml
.github/workflows/: release-validation.yml  type-check.yml
Learning/: 学习指南_通关地图.md  认知架构大一统全书.md
Learning/工程进阶手册/: 00_针对Aurora的Python语法大师课.md  01_工程基建与数据建模.md  02_并发控制与运行稳健性.md  03_接口暴露与质量护城河.md
Learning/肌肉记忆特训场/: 01_核心模式套路练习.py  02_架构重构竞技场.md
Learning_Archive/: 01_基础篇_开发环境与语法初探.md  02_数据篇_Pydantic与数据建模.md  03_架构篇_并发与运行特性.md  04_算法篇_记忆向量与遗忘机制.md  05_AI篇_概率论与决策大考.md  06_部署篇_FastAPI与接口自动化.md  07_思考篇_架构师极端场景推演.md  全栈大师指南.md  旧版学习说明.md  练习_向量计算.py  练习_基础验证.py  练习_引导程序.py  练习_数据类.py  练习_概率逻辑.py  练习_运行时并发.py  练习_配置管理.py
Learning_Archive/归档_实战演练/: README.md
Learning_Archive/归档_认知理论/: 00_Map.md
aurora/: __init__.py  __main__.py  api.py  cli.py  config.py  exceptions.py  field_engine.py  hub.py  hub_test.py  integration_test.py  mcp.py  memory.py  metrics.py  new.md  performance_test.py  projections.py  service.py  service_determinism_test.py  service_idempotency_test.py  store.py  system.py
aurora/algorithms/: __init__.py  abstention.py  abstention_test.py  aurora_core.py  aurora_core_test.py  causal.py  causal_test.py  coherence.py  coherence_test.py  conflict_detection_test.py  constants.py  entity_tracker.py  entity_tracker_test.py  evolution.py  evolution_test.py  knowledge_classifier_test.py  narrator.py  pressure.py  pressure_test.py  relationship.py  relationship_test.py  self_narrative.py  self_narrative_test.py  serialization.py  temporal_integration_test.py  tension_test.py  timeline_retrieval_test.py  types.py  update_detection_test.py
aurora/api/: __init__.py  app.py  schemas.py
aurora/being/: continuity.py  drift.py  dynamics_profile.json  forces.py  metabolic_state.py  orientation.py  profile.py  touch.py  touch_lexicon.json
aurora/benchmark/: __init__.py  interface.py  interface_test.py  metrics.py
aurora/benchmarks/: __init__.py  interface.py  metrics.py
aurora/budget/: __init__.py  controller.py
aurora/core/: __init__.py  causal.py  coherence.py  config.py  constants.py  fact_extractor.py  knowledge_classifier.py  math.py  tension.py  (+2 more)
aurora_memory.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
aurora_ontology_core/: README_CN.md  README_zh.md  core_models.py  demo_run.py  lifecycle_core.py  memory_core.py  relation_core.py
aurora_v2_examples/: README.md  aurora_patch_examples_cn.md  demo_reweave_run.py  engine_commit_fix_example.py  memory_reweave_v2_example.py  models_v2_example.py  relation_store_v2_example.py  sleep_bridge_example.py
docs/: AURORA_production_pack.md  README.md  aurora-api-contract.md  aurora-architecture-blueprint.md  aurora-architecture-principles.md  aurora-final-architecture-blueprint.md  aurora-mcp-v1.md  aurora-module-map.md  aurora-rewrite-roadmap.md  benchmark_guide.md  config_migration_complete.md  engineering.md  longmemeval_sota_analysis.md  maintainer_guide.md  narrative_memory_architecture.md  quality_improvement_roadmap.md  quality_progress.md
scripts/: migrate_imports.py  observe_runtime.py  quality_check.py
tests/: __init__.py  conftest.py  live_llm_smoke.py  test_abstention.py  test_academic_release_vnext.py  test_api_mcp_vnext.py  test_aurora_core.py  test_causal.py  test_coherence.py  test_conflict_detection.py  test_determinism.py  test_distillation.py  test_field_retriever.py  test_field_runtime_vnext.py  test_friction.py  test_http_mcp.py  test_kernel_vnext.py  test_knowledge_classifier.py  test_live_bailian_vnext.py  test_llm_config.py  test_memory_brief_vnext.py  test_models.py  test_narrator.py  test_projection.py  test_relationship.py  test_release_surface.py  test_replay_vnext.py  test_repository_audit.py  test_repository_audit_vnext.py  test_runtime_kernel.py  test_self_narrative.py  test_store_vnext.py  test_surface_vnext.py  test_tension.py  test_time_filter.py  test_workspace_projection_vnext.py  test_workspace_readout.py
(+546 files in other folders)
