[project]
name = "aurora-memory"
version = "1.0.0"
description = "Aurora rewrite runtime with awake/doze/sleep continuity."
requires-python = ">=3.10"
authors = [{ name = "AURORA Contributors" }]
readme = "README.md"
license = { text = "Proprietary" }
dependencies = [
  "pydantic>=2.6",
  "fastapi>=0.110",
  "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "mypy>=1.8",
  "ruff>=0.1",
]

[project.scripts]
aurora = "aurora.surface.cli:main"

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["aurora*"]
namespaces = true

[tool.setuptools.package-data]
"aurora.being" = ["touch_lexicon.json", "dynamics_profile.json"]

[tool.mypy]
python_version = "3.10"
namespace_packages = true
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true
