[project]
name = "aurora"
version = "1.0.0"
description = "Aurora - First-principles adaptive memory architecture."
requires-python = ">=3.13"
authors = [{ name = "AURORA Contributors" }]
readme = "README.md"
license = "LicenseRef-AURORA-Proprietary"
license-files = ["LICENSE"]
dependencies = [
  "pydantic>=2.12.5",
  "fastapi>=0.135.2",
  "uvicorn>=0.42.0",
  "mcp>=1.26.0,<2",
  "numpy>=2.4.3",
  "torch>=2.11.0",
  "transformers>=5.3.0",
  "tokenizers>=0.22.2",
  "safetensors>=0.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "pyyaml>=6.0.3",
  "ruff>=0.15.7",
]

[project.scripts]
aurora = "aurora.surfaces.cli:main"
aurora-mcp = "aurora.surfaces.mcp:main"

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["aurora*"]
namespaces = true


[tool.mypy]
python_version = "3.13"
namespace_packages = true
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.aurora.repository_policy]
requires_python = ">=3.13"
mypy_python_version = "3.13"
blocking_python_versions = ["3.13", "3.14"]
future_smoke_python = "3.15-dev"
future_smoke_allow_prereleases = true
user_install_command = "uv sync --frozen"
developer_sync_command = "uv sync --frozen --extra dev"
validation_command = "make check"
pre_commit_command = "uv run pre-commit run --all-files"
dependabot_ecosystems = ["github-actions", "uv"]
dependabot_groups = ["runtime-dependencies", "developer-dependencies"]
developer_make_targets = ["sync", "test", "lint", "typecheck", "compile", "check"]
required_tracked_paths = [
  ".github/dependabot.yml",
  ".github/workflows/release-validation.yml",
  ".pre-commit-config.yaml",
  "CONTRIBUTING.md",
  "Makefile",
]
required_tracked_prefixes = ["docs/", "tests/integration/"]
forbidden_tracked_paths = ["AGENTS.md", "CLAUDE.md", "claude.md"]
forbidden_tracked_prefixes = ["tests/test_live_", "tests/test_surface_"]
non_ascii_allowed_paths = ["aurora.md"]
required_gitignore_patterns = [
  ".DS_Store",
  ".aurora/",
  ".mypy_cache/",
  ".pytest_cache/",
  ".ruff_cache/",
  ".venv/",
  "*.egg-info/",
  "*.sqlite",
  "dist/",
]
